[package]
name = "url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.5.0"
addr = "0.15.6"
clap = { version = "4.4", features = [
    "derive",
    "suggestions",
    "color",
    "wrap_help",
] }
